P01/Tests/SyntaxErrors/badalphasize4.tm
states 3
I
A -
B +
alphabet 3 a


